force-app/main/default/objects/Product_Migration__c/Product_Migration__c.object-meta.xml
<CustomObject>
    <description>Product Migrations is to be used to capture customer information along a products end of life cycle.</description>
    <label>Product Migration</label>
    <nameField>
        <label>Product Migration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>