force-app/main/default/objects/Product_Migration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Customer Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Migrations</relationshipLabel>
    <relationshipName>Product_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>