force-app/main/default/objects/Product_Migration__c/fields/Account_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Cust_ID__c</fullName>
    <formula>Account__r.QWBS_Cust_ID__c</formula>
    <label>Account Cust ID</label>
    <type>Text</type>
</CustomField>