force-app/main/default/objects/Product_Migration__c/fields/Active_Alert__c.field-meta.xml
<CustomField>
    <fullName>Active_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Is this customer using Active Alert?</inlineHelpText>
    <label>Active Alert</label>
    <type>Checkbox</type>
</CustomField>