force-app/main/default/objects/Product_Migration__c/fields/Baseline_RN_Product_Usage__c.field-meta.xml
<CustomField>
    <fullName>Baseline_RN_Product_Usage__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Data baseline established for RN customer RTS product usage.</inlineHelpText>
    <label>Baseline RN Product Usage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>