force-app/main/default/objects/Product_Migration__c/fields/Bridge_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Is this customer using Bridge Dispatch?</inlineHelpText>
    <label>Bridge Dispatch</label>
    <type>Checkbox</type>
</CustomField>