force-app/main/default/objects/Product_Migration__c/fields/Fleet_Loader__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Loader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Is this customer using Fleet Loader?</inlineHelpText>
    <label>Fleet Loader</label>
    <type>Checkbox</type>
</CustomField>