force-app/main/default/objects/Product_Migration__c/fields/Migration_Group__c.field-meta.xml
<CustomField>
    <fullName>Migration_Group__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Specific for RTS to RNA migrations</inlineHelpText>
    <label>Migration Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1a</fullName>
            </value>
            <value>
                <fullName>1b</fullName>
            </value>
            <value>
                <fullName>2a</fullName>
            </value>
            <value>
                <fullName>2b</fullName>
            </value>
            <value>
                <fullName>3a</fullName>
            </value>
            <value>
                <fullName>3b</fullName>
            </value>
            <value>
                <fullName>4a</fullName>
            </value>
            <value>
                <fullName>4b</fullName>
            </value>
            <value>
                <fullName>5a</fullName>
            </value>
            <value>
                <fullName>5b</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>