force-app/main/default/objects/Product_Migration__c/fields/Migration_Interest__c.field-meta.xml
<CustomField>
    <fullName>Migration_Interest__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Specify the Customer&apos;s migration interest</inlineHelpText>
    <label>Migration Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - In Sales Cycle</fullName>
            </value>
            <value>
                <fullName>2 - Need More Information</fullName>
            </value>
            <value>
                <fullName>3 - No Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>