force-app/main/default/objects/Product_Migration__c/fields/Migration_Messaging_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Migration_Messaging_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Messaging Letter Sent</label>
    <type>Checkbox</type>
</CustomField>