force-app/main/default/objects/Product_Migration__c/fields/Migration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Migration_Notes__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Provide a high-level summary of the customer&apos;s migration</inlineHelpText>
    <label>Migration Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>