force-app/main/default/objects/Product_Migration__c/fields/of_Routes__c.field-meta.xml
<CustomField>
    <fullName>of_Routes__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Input the # of Routes this customer completes</inlineHelpText>
    <label># of Routes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>