force-app/main/default/objects/Product_Migration__c/fields/Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the Target Migration Date has been updated with future date.</description>
    <inlineHelpText>Number of times the Target Migration Date has been updated with future date.</inlineHelpText>
    <label>Push Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>