force-app/main/default/objects/Product_Migration__c/fields/Reason_s_Not_to_Migrate__c.field-meta.xml
<CustomField>
    <fullName>Reason_s_Not_to_Migrate__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Specify the Customer&apos;s reason(s) not to migrate to RNA</inlineHelpText>
    <label>Reason(s) Not to Migrate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted in Amazon</fullName>
            </value>
            <value>
                <fullName>Integration Costs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Status Quo</fullName>
            </value>
            <value>
                <fullName>Timing/Existing contract with competitor</fullName>
            </value>
            <value>
                <fullName>Value/ROI</fullName>
            </value>
            <value>
                <fullName>Privacy/HIPAA Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>