force-app/main/default/objects/Product_Migration__c/fields/Reason_s_to_Migrate__c.field-meta.xml
<CustomField>
    <fullName>Reason_s_to_Migrate__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Specify the Customer&apos;s reason(s) to migrate to RNA</inlineHelpText>
    <label>Reason(s) to Migrate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All in one solution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RTS Product Expiration</fullName>
            </value>
            <value>
                <fullName>Timing/adding products</fullName>
            </value>
            <value>
                <fullName>Want Cloud/Save on IT costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>