force-app/main/default/objects/Product_Migration__c/fields/Target_Date_of_Migration__c.field-meta.xml
<CustomField>
    <fullName>Target_Date_of_Migration__c</fullName>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Input the date which the customer plans to be fully transitioned from RTS to RNA</inlineHelpText>
    <label>Target Date of Migration</label>
    <type>Date</type>
</CustomField>