force-app/main/default/objects/Product_Migration__c/fields/Telematics_Adapter_TA__c.field-meta.xml
<CustomField>
    <fullName>Telematics_Adapter_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telematics Adapter (TA)</label>
    <type>Checkbox</type>
</CustomField>