force-app/main/default/objects/Product_Migration__c/fields/Territory_Planner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Owned by Sales (Hy Mixson/Dean Bikle) and PM (Casey Crawford). Required as part of the MBO to track RTS to RNA Product Migrations.</description>
    <inlineHelpText>Is this customer using Territory Planner?</inlineHelpText>
    <label>Territory Planner</label>
    <type>Checkbox</type>
</CustomField>