force-app/main/default/objects/Product_Migration__c/fields/Updated_by_Rep__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Rep__c</fullName>
    <formula>IF(
CreatedById = LastModifiedById,
FALSE, 
TRUE)</formula>
    <label>Updated by Rep</label>
    <type>Checkbox</type>
</CustomField>