force-app/main/default/objects/Product_Migration__c/fields/X3rd_Party_Mobile__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party Mobile</label>
    <type>Checkbox</type>
</CustomField>