force-app/main/default/objects/Product_Migration__c/fields/XRS_Standalone_XRS_S__c.field-meta.xml
<CustomField>
    <fullName>XRS_Standalone_XRS_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XRS Standalone (XRS-S)</label>
    <type>Checkbox</type>
</CustomField>