force-app/main/default/objects/Product_Migration__c/fields/XRS_XRS__c.field-meta.xml
<CustomField>
    <fullName>XRS_XRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XRS (XRS)</label>
    <type>Checkbox</type>
</CustomField>