force-app/main/default/objects/Product_Migration__c/recordTypes/RTS_to_RNA_Migration.recordType-meta.xml
<RecordType>
    <fullName>RTS_to_RNA_Migration</fullName>
    <active>true</active>
    <description>Used for customers transitioning from RTS to RNA</description>
    <label>RTS to RNA Migration</label>
</RecordType>